committed the final changes and changed conn string for Kunal

--- a/LitigationSoftware/LSApi/Web.config
+++ b/LitigationSoftware/LSApi/Web.config
@@ -36,7 +36,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="myConnectionString" connectionString="Data Source=DESKTOP-65IF9QP\SQL2014;Initial Catalog=LitigationApp;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="myConnectionString" connectionString="Data Source=DESKTOP-N0AQN17\SQLEXPRESS;Initial Catalog=LitigationApp;Integrated Security=True;" providerName="System.Data.SqlClient" />
     <!--<add name="myConnectionString" connectionString="Data Source=DESKTOP-0L9EJKB\SQLEXPRESS;Initial Catalog=LitigationApp;Integrated Security=True;" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <system.web>
